<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/judul_note"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buat_waktu"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/buat_waktu_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buat_waktu_konten"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenggat_waktu_u0020"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tenggat_jam_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenggat_waktu_konten"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_bright"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_note_u0020"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_note"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_bright"/>
</LinearLayout>