<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".db.ui.main.UpdateNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/judul_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_note"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/judul_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/judul_note"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/list_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_note"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/deskripsi_note"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tenggat_hari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenggat_hari"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/tenggat_hari_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/tenggat_hari_belum_diset"
            android:clickable="true"
            android:longClickable="false"
            android:focusable="false"/>

        <EditText
            android:id="@+id/tenggat_jam_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_marginBottom="15dp"
            android:hint="@string/tenggat_jam_belum_diset"
            android:clickable="true"
            android:longClickable="false"
            android:focusable="false"/>

        <CheckBox
            android:id="@+id/checkbox_is_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selesai"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:text="@string/update"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btn_batal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:text="@string/batal"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>