<?xml version="1.0" encoding="utf-8"?>

<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="6dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bentuk_kotak"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/item_title_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_note"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginBottom="5sp"/>

            <TextView
                android:id="@+id/item_due_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tenggat_hari"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/item_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_note"
                android:textSize="15sp"/>
        </LinearLayout>
    </RelativeLayout>
</layout>